# qing

./: .gitignore  Cargo.toml  PLANS.md  README.md  todo.toml
quing/src/: main.rs
src/: echo.rs  in_out.rs  lib.rs  load.rs  main.rs  playback.rs  quer.rs  quing.rs  serde.rs  songs.rs  state.rs  utilities.rs
