[package]
name = "quing"
edition = "2021"
version = "1.9.0"
authors = ["OST-Gh"]
description = "A (hopefully) minimalist toml based song shuffler"
keywords = ["audio", "playback", "toml", "minimal"]
categories = ["command-line-utilities", "multimedia::audio"]
repository = "https://github.com/OST-Gh/quing.git"
license-file = "LICENSE"
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive"], default-features = false }
toml = { version = "0", features = ["parse"], default-features = false }
crossterm = { version = "0", default-features = false }
crossbeam-channel = "0"
rodio = "0"
lofty = "0"
fastrand = "2"

[profile.release]
opt-level = "z"
debug = false
split-debuginfo = "unpacked"
strip = true
debug-assertions = false
overflow-checks = false
lto = true
panic = "unwind"
incremental = false
codegen-units = 1

[profile.release.package."*"]
opt-level = "z"
debug = false
split-debuginfo = "unpacked"
strip = true
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 1
